<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">畅农</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login">登录</string>
	<string name="password">密码</string>
	<string name="username">帐号</string>
	<string name="feedback_content">反馈内容:</string>
	<string name="contact_way">联系方式:</string>
	<string name="fruit">花果山</string>
	<string name="vegetables">朋香阁</string>
	<string name="other">其他</string>
	<string name="more">更多</string>
	<string name="banana">香蕉</string>
	<string name="cart_no_data">购物车肚子空空</string>
	<string name="cart_may_like">购物车可能喜欢</string>
	<string name="my_watchlist">我的关注</string>
	<string name="browse_history">浏览记录</string>
	<string name="my_order">我的订单</string>
	<string name="look_all_order">查看全部订单</string>
	<string name="my_pocket">我的钱包</string>
	<string name="content_feedback">意见反馈</string>
	<string name="wait_pay">待付款</string>
	<string name="wait_get_product">待收货</string>
	<string name="wait_assess">待评价</string>
	<string name="exit">退出</string>
	<string name="setting">设置</string>
	<string name="light_setting">亮度调节</string>
	<string name="about">关于</string>
	<string name="exit_commit">确认退出畅农客户端?</string>
	<string name="cancel">取消</string>
	<string name="product_detail">商品详情</string>
	<string name="product_example_des">很好,非常好吃!</string>
	<string name="add_to_cart">加入购物车</string>
	<string name="commit">提交</string>
	<string name="tip_feedback_conent">请输入产品意见,我们将不断优化体验</string>
	<string name="tip_feedback_contentway">请输入您的手机号/邮箱等(选填)</string>
	<string name="carshop">购物车</string>
	<string name="edit">编辑</string>
	<string name="complete">完成</string>
	<string name="go_calc">去结算</string>
	<string name="calc">合计</string>
	<string name="select_all">全选</string>
	<string name="commit_order">确认订单</string>
	<string name="gaofei">高飞</string>
	<string name="phone">18396189097</string>
	<string name="address">福建市福州市闽侯县上街镇福建师范大学兰苑11-101宿舍</string>
	<string name="product_money">商品金额</string>
	<string name="transport_money">运费</string>
	<string name="myinfo">我的账户</string>
	<string name="headphoto">头像</string>
	<string name="userid">会员号</string>
	<string name="vipname">会员名</string>
	<string name="sex">性别</string>
	<string name="address_manager">地址管理</string>
	<string name="money_left">账户余额</string>
	<string name="ex_userid">1432220483</string>
	<string name="ex_username">高飞</string>
	<string name="ex_sex">男</string>
	<string name="ex_money_left">16.88</string>
	<string name="delete">删除</string>
	<string name="comm_product_date">到货日期</string>
	<string name="comm_product_city">配送城市</string>
	<string name="ex_pire_time">默认日期</string>
	<string name="order_no">订单编号:</string>
	<string name="order_date">下单时间:</string>
	<string name="expire_date">期望到货时间:</string>
	<string name="order_state">订单状态:</string>
	<string name="order_product">购买的商品:</string>
	<string name="order_money">商品总额:</string>
	<string name="ex_order_no">201505201434568761</string>
	<string name="ex_order_date">2015-5-20 14:23:32</string>
	<string name="ex_expire_date">2015-6-3</string>
	<string name="ex_order_state">未发货</string>
	<string name="ex_order_product">香蕉(38.5/斤*2),苹果(38.5/斤*3),雪梨(42.5/斤*5)</string>
	<string name="ex_order_money">¥123.23</string>
	<string name="search_result">搜索结果</string>
	<string name="order_access">订单评价</string>
	<string name="transation_success">交易成功</string>
	<string name="ex_order_product2">香蕉*2,苹果*3,雪梨*4</string>
	<string name="access_product_num">实付:¥123.23</string>
	<string name="away_access">立即评价</string>
	<string name="tip_order_access">请输入订单评价</string>
	<string name="access">评价</string>
	<string name="phoneNumber">联系电话</string>
	<string name="ex_phoneNumber">01234567891</string>
	<string name="ok">确定</string>
	<string name="name_change">姓名修改</string>
	<string name="address_change">地址修改</string>
	<string name="line_phone">联系电话</string>
	<string name="enter_name">输入姓名</string>
	<string name="password_change">密码修改</string>
	<string name="orign_password">原密码</string>
	<string name="new_password">新密码</string>
	<string name="commit_new_password">确认新密码</string>
	<string name="commit_change">确认修改</string>
	<string name="information_detail">信息详情</string>
	<string name="register">注册</string>
	<string name="name">姓名</string>
	<string name="commit_password">确认密码</string>
	<string name="address_rigister">送货地址</string>
	<string name="phone_rigister">手机号码</string>
	<string name="male">男</string>
	<string name="product_total_money">商品总价:</string>
	<string name="shop_price">本店售价:</string>
	<string name="unit">单位</string>
	<string name="city">城市</string>
	<string name="quantity">数量</string>
	<string name="buy_now">立即购买</string>
	<string name="catty">斤</string>
	<string name="bag">袋</string>
	<string name="fuzhou">福州</string>
	<string name="xiamen">厦门</string>
	<string name="zhanzhou">漳州</string>
	<string name="quanzhou">泉州</string>
	<string name="sub">-</string>
	<string name="add">+</string>
	<string name="one">1</string>
	<string name="log_off">注销</string>
	<string name="quite">退出</string>
</resources>
