<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_no"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_order_no"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_order_date"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire_date"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_expire_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_expire_date"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_state"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_order_state"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_product"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_order_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_order_product"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_money"
            android:textSize="16sp"
            android:textColor="#9900ff"/>
        <TextView 
            android:id="@+id/text_order_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_order_money"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/blue_virtual_line"/>
</LinearLayout>
