<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/title_bg_color" >

            <ImageView
                android:id="@+id/img_product_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/title_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/product_detail"
                android:textSize="15sp" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_product_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/apple" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <TextView
                        android:id="@+id/text_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/banana"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_product_des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/text_product_name"
                        android:text="@string/product_example_des"
                        android:textColor="#af0000ff"
                        android:textSize="15sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_product_num_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/unit"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_product_unit_catty"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/catty"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_product__unit_bag"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/bag"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_city"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/city"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_fuzhou"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/fuzhou"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_xiamen"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/xiamen"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_zhanzhou"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="60dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/zhanzhou"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_quanzhou"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/quanzhou"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_quantiity"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/quantity"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_sub"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:background="@drawable/add_background_n"
                        android:text="@string/sub"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_product_num"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:background="@drawable/text_background"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_add"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@android:color/black"
                        android:background="@drawable/add_background_n"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_main_img_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_my_watch"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/watch" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:scaleType="centerInside"
            android:src="@drawable/cart_normal" />

        <TextView
            android:id="@+id/text_buy_now"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@color/buy_now_background_color"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="@color/add_to_cart_textcolor"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>