<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/text_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/exit_dialog_title_color"
        android:textSize="20sp"
        android:text="@string/order_access"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_color"/>
    
    <EditText
        android:id="@+id/text_access_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:gravity="top"
        android:background="@drawable/bg_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="16sp"
        android:textColorHint="#3f000000"
        android:hint="@string/tip_order_access"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_exit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/common_dialog_cancle"
            android:textColor="@color/exit_dialog_title_color"
            android:textSize="20sp"
            android:text="@string/cancel"/>
        
       <Button 
            android:id="@+id/btn_exit_commit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/common_dialog_confirm"
            android:text="@string/access"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>
