<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_color"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_bg_color" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/carshop"
            android:textColor="@color/carshop_textcolor"
            android:textSize="20sp" />
        
         <TextView
            android:id="@+id/text_edit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/edit_textcolor"
            android:layout_centerVertical="true"
            android:textSize="16sp" />
    </RelativeLayout>
    <Button 
        android:id="@+id/btn_login_carshop"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:background="@drawable/button_back_normal"
        android:text="@string/login"/>

    <View 
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>
    <ImageView 
        android:layout_marginTop="20dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cart_no_data"/>
    
    <TextView 
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/cart_no_data_rect_icon"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/cart_no_data"/>
    <!-- 
      <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cart_no_data_arrow"/>
         -->
      <!-- 
      <TextView 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/cart_may_like"/>
         -->
</LinearLayout>
